# stack2cabal

./: .editorconfig  .gitignore  .gitlab-ci.yml  .stylish-haskell.yaml  CHANGELOG.md  Dockerfile  README.md  brittany.yaml  cabal-stack  cabal.project  cabal.project.freeze  flake.nix  shelltest.test  stack.yaml  stack2cabal  stack2cabal.cabal  stackage-to-hackage.cabal  test.sh
.github/workflows/: docker.yaml  haskell.yml  release.yaml
exe/: Main.hs
lib/StackageToHackage/: Hackage.hs  Hpack.hs  Prelude.hs  Stackage.hs
lib/StackageToHackage/Hackage/: Types.hs
lib/StackageToHackage/Stackage/: Types.hs  YAML.hs
src/: Main.hs  Stackage.hs
stack2cabal/: stack2cabal.cabal
stack2cabal/exe/: Main.hs
stackage-to-hackage/: stackage-to-hackage.cabal
stackage-to-hackage/lib/StackageToHackage/: Hackage.hs  Stackage.hs
tests/: snapshot.yaml  stack.yaml
tests/cardano/: cabal.project  cabal.project.freeze  smash.cabal
tests/hpack/: cabal.project  cabal.project.freeze  hpack.cabal  package.yaml  stack.yaml
tests/self/: cabal.project  cabal.project.freeze  stack.yaml
tests/simplest/: cabal.project  cabal.project.freeze
tests/snapshot/: cabal.project  cabal.project.freeze  cabal.sorted.project  cabal.unsorted.project.freeze  stack.yaml
tests/stackage/: cabal.project  cabal.project.freeze  stack.yaml
