cabal-version: 2.2
name:          stack2cabal
version:       1.0.4
synopsis:
  Convert stack projects to cabal.project + cabal.project.freeze

license:       GPL-3.0-or-later
license-file:  LICENSE
author:        Tseen She
maintainer:    Tseen She
copyright:     2018 Tseen She
bug-reports:   https://gitlab.com/tseenshe/stack2cabal/merge_requests
tested-with:   GHC ^>=8.2.2 || ^>=8.4.4 || ^>=8.6.5
category:      Building
description:
  Convert @stack.yaml@ \/ @package.yaml@ to @cabal.project@ \/ @cabal.project.freeze@\/ @*.cabal@.

-- https://www.haskell.org/cabal/users-guide/cabal-projectindex.html

common deps
  build-depends:
    , base             >=4.10    && <5.0
    , bytestring
    , Cabal            >=2.2     && <3.0
    , containers
    , directory
    , extra            ^>=1.6.13
    , filepath
    , hpack            ^>=0.31.0
    , HsYAML           ^>=0.1.1.2
    , http-client      ^>=0.5.14 || ^>=0.6.0
    , http-client-tls  ^>=0.3.5.3
    , text             ^>=1.2.3.1

  ghc-options:      -Wall -Werror=missing-home-modules
  default-language: Haskell2010

executable stack2cabal
  import:         deps
  hs-source-dirs: exe
  main-is:        Main.hs
  build-depends:  stack2cabal
  ghc-options:    -threaded

library
  import:          deps
  hs-source-dirs:  lib

  -- cabal-fmt: expand lib
  exposed-modules:
    StackageToHackage.Hackage
    StackageToHackage.Stackage
