cabal-version: 2.2
name:          stack2cabal
version:       1.0.8
synopsis:
  Convert stack projects to cabal.project + cabal.project.freeze

license:       GPL-3.0-or-later
license-file:  LICENSE
author:        Tseen She
maintainer:    Julian Ospald
copyright:     2018 Tseen She
bug-reports:   https://gitlab.com/tseenshe/stack2cabal/merge_requests
tested-with:   GHC ^>=8.8.4 || ^>=8.10.2
category:      Building
description:
  Convert @stack.yaml@ \/ @package.yaml@ to @cabal.project@ \/ @cabal.project.freeze@\/ @*.cabal@.

-- https://www.haskell.org/cabal/users-guide/cabal-projectindex.html

flag ghcflags
  description: Generate .ghc.flags files during compilation
  manual:      True
  default:     False

common deps
  build-depends:
    , base                  >=4.10    && <5.0
    , bytestring
    , Cabal                 >=3.0     && <3.4
    , cabal-install-parsers
    , containers
    , directory
    , exceptions
    , extra                 >=1.6.13
    , filepath
    , filepattern           >=0.1.2
    , hpack                 ==0.34.2
    , HsYAML                ^>=0.2
    , http-client           >=0.5.14
    , http-client-tls       >=0.3.5.3
    , optparse-applicative  >=0.15
    , process               >=1.6.9.0
    , safe                  >=0.3.19
    , text                  >=1.2.3.1
    , temporary             >=1.3
    , unordered-containers  >=0.2.10.0

  if flag(ghcflags)
    build-tool-depends: hsinspect:hsinspect -any
    build-depends:      ghcflags
    ghc-options:        -fplugin GhcFlags.Plugin

  ghc-options:      -Wall
  default-language: Haskell2010

executable stack2cabal
  import:         deps
  hs-source-dirs: exe
  main-is:        Main.hs
  build-depends:  stack2cabal
  ghc-options:    -threaded

library
  import:          deps
  hs-source-dirs:  lib

  -- cabal-fmt: expand lib
  exposed-modules:
    StackageToHackage.Hackage
    StackageToHackage.Stackage
