cabal-version:      2.2
name:               stack2cabal
version:            1.0.13
synopsis:
  Convert stack projects to cabal.project + cabal.project.freeze

license:            GPL-3.0-only
license-file:       LICENSE
author:             Tseen She
maintainer:         Julian Ospald
copyright:          2018 Tseen She, 2020 Julian Ospald
bug-reports:        https://github.com/hasufell/stack2cabal/issues
tested-with:        GHC ^>=8.8.4 || ^>=8.10.7
category:           Building
description:
  Convert @stack.yaml@ \/ @package.yaml@ to @cabal.project@ \/ @cabal.project.freeze@\/ @*.cabal@.

extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/hasufell/stack2cabal.git

-- https://www.haskell.org/cabal/users-guide/cabal-projectindex.html

flag ghcflags
  description: Generate .ghc.flags files during compilation
  manual:      True
  default:     False

common deps
  build-depends:
    , base                  >=4.13     && <5.0
    , bytestring
    , Cabal                 >=3.0      && <=3.4
    , containers
    , directory
    , exceptions            ^>=0.10.4
    , extra                 ^>=1.7.8
    , filepath
    , filepattern           ^>=0.1.2
    , fuzzy-dates           ^>=0.1.1.2
    , hourglass             ^>=0.2.12
    , hpack                 ==0.34.5
    , HsYAML                ^>=0.2
    , http-client           ^>=0.6.4.1
    , http-client-tls       ^>=0.3.5.3
    , optparse-applicative  >=0.15.1.0 && < 0.17
    , process               >=1.6.9.0
    , safe                  ^>=0.3.19
    , temporary             ^>=1.3
    , text                  >=1.2.3.1

  if flag(ghcflags)
    build-tool-depends: hsinspect:hsinspect -any
    build-depends:      ghcflags
    ghc-options:        -fplugin GhcFlags.Plugin

  ghc-options:      -Wall
  default-language: Haskell2010

executable stack2cabal
  import:         deps
  hs-source-dirs: exe
  main-is:        Main.hs
  build-depends:  stack2cabal
  ghc-options:    -threaded

library
  import:          deps
  hs-source-dirs:  lib

  -- cabal-fmt: expand lib
  exposed-modules:
    StackageToHackage.Hackage
    StackageToHackage.Hackage.Types
    StackageToHackage.Hpack
    StackageToHackage.Prelude
    StackageToHackage.Stackage
    StackageToHackage.Stackage.Types
    StackageToHackage.Stackage.YAML
