cabal-version:       2.2
name:                stackage-to-hackage
version:             1.0.2
synopsis:            Convert stack.yaml to cabal.project + cabal.project.freeze
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              Tseen She
maintainer:          Tseen She
copyright:           2018 Tseen She
bug-reports:         https://gitlab.com/tseenshe/stackage-to-hackage/merge_requests
tested-with:         GHC ^>= 8.4.4 || ^>= 8.6.2
category:            Building
description:
  This is a small tool to create a cabal.project and cabal.project.freeze file
  for an existing Haskell application that has its build plan defined for
  the stack build tool.

  The following convenience script invokes stackage-to-hackage and hpack
  together [stack2cabal](https://gitlab.com/tseenshe/stackage-to-hackage/blob/master/stack2cabal).

source-repository head
  type: git
  location: https://gitlab.com/tseenshe/stackage-to-hackage

-- https://www.haskell.org/cabal/users-guide/cabal-projectindex.html

common deps
  build-depends:    , base ^>= 4.11.1.0 || ^>= 4.12.0.0
                    , bytestring           ^>= 0.10.8.2
                    , Cabal                ^>= 2.4.1.0
                    , containers           ^>= 0.6.0.1
                    , directory            ^>= 1.3.3.1
                    , extra                ^>= 1.6.13
                    , filepath             ^>= 1.4.2.1
                    , text                 ^>= 1.2.3.1
  ghc-options:        -Wall
                      -Werror=missing-home-modules
  default-language:   Haskell2010

library stackage-to-hackage-lib
  import:             deps
  hs-source-dirs:     lib
  exposed-modules:    StackageToHackage.Hackage
                    , StackageToHackage.Stackage
  build-depends:    , HsYAML               ^>= 0.1.1.2
                    -- http-client, not http-streams, to match hpack
                    , http-client          ^>= 0.5.14
                    , http-client-tls      ^>= 0.3.5.3

executable stackage-to-hackage
  import:             deps
  hs-source-dirs:     exe
  main-is:            Main.hs
  build-depends:      stackage-to-hackage-lib
                    , optparse-applicative ^>= 0.14.3.0
  ghc-options:        -threaded
